--- a/package.json
+++ b/package.json
@@ -1,27 +1,40 @@
 {
-  "name": "Bovt",
-  "version": "0.0.0",
+  "name": "justproject",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
     "bookshelf": "^0.9.2",
+    "bower": "^1.7.7",
+    "connect-flash": "^0.1.1",
     "consolidate": "^0.14.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "html": "0.0.10",
     "knex": "^0.10.0",
+    "method-override": "^2.3.5",
     "mongodb": "^2.1.14",
     "mongoose": "^4.4.10",
-    "mongoskin": "^1.4.13",
-    "monk": "^1.0.1",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg": "^4.5.1",
     "serve-favicon": "~2.3.0",
     "underscore": "^1.8.3",
     "validator": "^5.1.0"
-  }
+  },
+  "description": "shop",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "http://git.thinkmobiles.com:9000/maxshuhaliia/JustProject.git"
+  },
+  "author": "max",
+  "license": "ISC"
 }
