--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "bookshelf": "^0.9.2",
     "bower": "^1.7.7",
     "connect-flash": "^0.1.1",
+    "connect-multiparty": "^2.0.0",
     "consolidate": "^0.14.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
+    "form-data": "^1.0.0-rc4",
     "html": "0.0.10",
     "knex": "^0.10.0",
     "method-override": "^2.3.5",
@@ -25,6 +27,8 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^4.5.1",
+    "randomstring": "^1.1.4",
+    "request": "^2.70.0",
     "serve-favicon": "~2.3.0",
     "underscore": "^1.8.3",
     "validator": "^5.1.0"
