--- a/package.json
+++ b/package.json
@@ -19,19 +19,23 @@
     "express-session": "^1.13.0",
     "form-data": "^1.0.0-rc4",
     "html": "0.0.10",
+    "imagemagick": "^0.1.3",
     "knex": "^0.10.0",
     "method-override": "^2.3.5",
+    "mime": "^1.3.4",
     "mongodb": "^2.1.14",
     "mongoose": "^4.4.10",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^4.5.1",
+    "random-strings": "0.0.1",
     "randomstring": "^1.1.4",
     "request": "^2.70.0",
     "serve-favicon": "~2.3.0",
+    "twilio": "^2.9.1",
     "underscore": "^1.8.3",
-    "validator": "^5.1.0"
+    "validator": "^5.2.0"
   },
   "description": "shop",
   "main": "app.js",
