--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^2.1.14",
     "mongoose": "^4.4.10",
     "morgan": "~1.6.1",
+    "nodemailer": "^2.3.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^4.5.1",
