--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "jquery": "^2.2.2",
     "backbone": "^1.3.2",
     "requirejs": "^2.2.0",
-    "text": "^2.0.14"
+    "text": "^2.0.14",
+    "slick-carousel": "^1.6.0"
   }
 }
