--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mime": "^1.3.4",
     "mongodb": "^2.1.14",
     "mongoose": "^4.4.10",
+    "mongoose-random": "^0.1.1",
     "morgan": "~1.6.1",
     "nodemailer": "^2.3.2",
     "passport": "^0.3.2",
@@ -33,6 +34,7 @@
     "randomstring": "^1.1.4",
     "request": "^2.70.0",
     "serve-favicon": "~2.3.0",
+    "slick-carousel": "^1.6.0",
     "twilio": "^2.9.1",
     "underscore": "^1.8.3",
     "validator": "^5.2.0"
